[gd_scene load_steps=2 format=3 uid="uid://u312lwca8fa8"]

[ext_resource type="Script" path="res://scenes/menus/menu pausa/pausemenu.gd" id="1_ro4n6"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ro4n6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 326.0
offset_bottom = 176.0

[node name="Button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 46.0
offset_top = 31.0
offset_right = 278.0
offset_bottom = 62.0
text = "Continuar"

[node name="Button2" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 46.0
offset_top = 72.0
offset_right = 278.0
offset_bottom = 103.0
text = "Volver a selección de Modo"

[node name="Button3" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 46.0
offset_top = 116.0
offset_right = 278.0
offset_bottom = 147.0
text = "Volver a menú principal"

[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Panel/Button3" to="." method="_on_button_3_pressed"]
